--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@ table.CodeRay td.code{padding:0 0 0 .75em}
 <div id="header">
 <h1>Unblu OpenAPI</h1>
 <div class="details">
-<span id="revnumber">version 8.8.2,</span>
-<span id="revdate">2024-10-14</span>
+<span id="revnumber">version 8.9.2,</span>
+<span id="revdate">2024-10-28</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -614,14 +614,14 @@ Do you want to improve this page? Please <a href="https://github.com/unblu/opena
 <pre class="CodeRay highlight"><code data-lang="xml"><span class="tag">&lt;dependency&gt;</span>
   <span class="tag">&lt;groupId&gt;</span>com.unblu.openapi<span class="tag">&lt;/groupId&gt;</span>
   <span class="tag">&lt;artifactId&gt;</span>models-v4<span class="tag">&lt;/artifactId&gt;</span>
-  <span class="tag">&lt;version&gt;</span>8.8.2<span class="tag">&lt;/version&gt;</span>
+  <span class="tag">&lt;version&gt;</span>8.9.2<span class="tag">&lt;/version&gt;</span>
 <span class="tag">&lt;/dependency&gt;</span></code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">Listing 2. Maven coordinates of the 'Models v4' project  (single line notation)</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="xml">com.unblu.openapi:models-v4:8.8.2</code></pre>
+<pre class="CodeRay highlight"><code data-lang="xml">com.unblu.openapi:models-v4:8.9.2</code></pre>
 </div>
 </div>
 </div>
@@ -646,14 +646,14 @@ It requires the <a href="https://github.com/unblu/openapi/tree/main/8.x.x/model-
 <pre class="CodeRay highlight"><code data-lang="xml"><span class="tag">&lt;dependency&gt;</span>
   <span class="tag">&lt;groupId&gt;</span>com.unblu.openapi<span class="tag">&lt;/groupId&gt;</span>
   <span class="tag">&lt;artifactId&gt;</span>jersey3-client-v4<span class="tag">&lt;/artifactId&gt;</span>
-  <span class="tag">&lt;version&gt;</span>8.8.2<span class="tag">&lt;/version&gt;</span>
+  <span class="tag">&lt;version&gt;</span>8.9.2<span class="tag">&lt;/version&gt;</span>
 <span class="tag">&lt;/dependency&gt;</span></code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">Listing 4. Maven coordinates of the 'Jersey Client v4' project  (single line notation)</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="xml">com.unblu.openapi:jersey3-client-v4:8.8.2</code></pre>
+<pre class="CodeRay highlight"><code data-lang="xml">com.unblu.openapi:jersey3-client-v4:8.9.2</code></pre>
 </div>
 </div>
 </div>
@@ -703,8 +703,23 @@ It requires the <a href="https://github.com/unblu/openapi/tree/main/8.x.x/model-
 <div class="sect2">
 <h3 id="for-project-maintainers"><a class="anchor" href="#for-project-maintainers"></a>For project maintainers</h3>
 <div class="paragraph">
-<p><code>signing.gnupg.keyName</code> and <code>signing.gnupg.passphrase</code> are expected to be set in your local <code>gradle.properties</code> file to be able to sign.
-<code>sonatypeUser</code> and <code>sonatypePassword</code> are expected to be set in order to be able to publish to a distant repository.</p>
+<p>Following properties are expected to be set (for example in <code>~/.gradle/gradle.properties</code>):</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>signing.gnupg.keyName</code></p>
+</li>
+<li>
+<p><code>signing.gnupg.passphrase</code></p>
+</li>
+<li>
+<p><code>s01ossSonatypeUsername</code></p>
+</li>
+<li>
+<p><code>s01ossSonatypePassword</code></p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
 <p>Command to build and publish the result to maven central:</p>
@@ -776,8 +791,8 @@ ssh-add ~/.ssh/id_rsa</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 8.8.2<br>
-Last updated 2024-09-30 10:01:16 +0200
+Version 8.9.2<br>
+Last updated 2024-10-28 07:44:22 +0100
 </div>
 </div>
 </body>
